# soul_kiln

./: .env.example  .gitignore  .gitmodules  DEPLOY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Procfile  README.md  config.yml  docker-compose.yml  examples.py  pyproject.toml  railway.json  railway.toml  requirements.txt  visualization_demo.py
config/: default.yaml
cypher-expert-mcp/: README.md  pyproject.toml
cypher-expert-mcp/src/cypher_expert_mcp/: __init__.py  server.py
cypher-expert-mcp/src/cypher_expert_mcp/agent/: __init__.py  core.py  memory.py  prompts.py
cypher-expert-mcp/src/cypher_expert_mcp/knowledge/: __init__.py  common_queries.md  cypher_reference.md  falkordb_specifics.md  optimization_patterns.md
cypher-expert-mcp/src/cypher_expert_mcp/tools/: __init__.py  ethics.py  query.py  schema.py  validate.py
deploy/falkordb/: Dockerfile
docker/: Dockerfile  docker-compose.yaml
docker/graphiti/: Dockerfile  Procfile  graphiti_server.py  railway.toml  requirements.txt
docs/: EXECUTIVE_SUMMARY.md  HANDBOOK.md  RAILWAY_DEPLOY.md  USER_HANDBOOK.md  bmad-agent-zero-refactor.md  bmad-dev-path.md  bmad-graph-first-architecture.md  kala-integration-plan.md
docs/bmad/: ROADMAP.md
docs/research/: kg-personas-for-agents.md
scripts/: __init__.py  export_template.py  init_db.py  run_evolution.py
src/: __init__.py  constants.py  main.py  models.py  settings.py
src/actions/: __init__.py  diffusion.py  generate.py  outcomes.py  score.py
src/agent_zero/: __init__.py  bridge.py  config.py  soul_agent.py
src/agents/: __init__.py  ambassador.py  candidate.py  controller.py  memory.py  plants.py
src/api/: __init__.py  config.py  metrics.py  server.py  templates.py  websocket.py
src/beliefs/: __init__.py  core.py  definitions.py
src/cli/: __init__.py  commands.py
src/community/: __init__.py  integration.py  membership.py  model.py  registry.py
src/core/: __init__.py  biomimicry.py  community.py  creation.py  development.py  entity.py  graph_store.py  instruments.py  proxy.py  runtime.py  seeding.py  sharing.py
src/dynamics/: __init__.py  activation.py  decay.py  healing.py  hebbian.py  perturbation.py
src/evolution/: __init__.py  crossover.py  loop.py  mutation.py  population.py  selection.py
src/functions/: __init__.py  decay.py  dissolve.py  heal.py  hebbian.py  introspect.py  perturb.py  spawn.py  spread.py  test_coherence.py  think.py
src/gestalt/: __init__.py  compare.py  compute.py  embedding.py  tendencies.py
src/graph/: __init__.py  client.py  connection.py  edges.py  mock_client.py  mock_substrate.py  moral_geometry.py  nodes.py  queries.py  safe_parse.py  schema.py  store.py  substrate.py  virtues.py
src/graphiti/: __init__.py  memory.py  retrieval.py  temporal.py
src/identity/: __init__.py  core.py
src/kiln/: __init__.py  loop.py  selection.py
src/knowledge/: __init__.py  episodes.py  pathways.py  pool.py
src/kuleana/: __init__.py  core.py  definitions.py
src/llm/: __init__.py  client.py
src/lore/: __init__.py  core.py  definitions.py
src/memory/: __init__.py  core.py
src/mercy/: __init__.py  chances.py  harm.py  judgment.py  lessons.py
src/persona/: __init__.py  capsule.py  community.py  temporal.py
src/proxy/: __init__.py  ambassador.py  autonomy.py  entity.py  manager.py
src/runtime/: __init__.py  agent.py  boot.py  bridge.py  factory.py  loaders.py  ssf.py
src/seed/: __init__.py  ambassador.py  core.py  run_seed.py
src/situations/: __init__.py  builder.py  examples.py  persistence.py
src/skills/: __init__.py  core.py  definitions.py
src/testing/: __init__.py  alignment.py  character.py  stimuli.py  trajectory.py
src/testui/: __init__.py  app.py
src/theatre/: __init__.py  artifacts.py  captions.py  concept_extractor.py  graph_view.py  hume_integration.py  integration.py  orchestrator.py  scene_generator.py  topic_detector.py  views.py
src/transport/: __init__.py  events.py  server.py  session.py
src/ui/: __init__.py  app.py  generator.py  renderer.py  theatre_bridge.py
src/utils/: __init__.py  activation.py  config.py
src/vessels/: __init__.py  diffusion.py  integration.py  persona.py
src/virtues/: __init__.py  anchors.py  tiers.py
src/voice/: __init__.py  core.py  definitions.py
tests/: __init__.py  test_basin.py  test_coherence.py  test_forces.py  test_graph_store.py  test_imports.py  test_kiln.py  test_safe_parse.py  test_simulator.py  test_spread.py  test_topology.py
virtue_basin/: __init__.py  basin.py  forces.py  simulator.py  topology.py  visualization.py
(+77 files in other folders)
